# dmuart

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dmuart.dmr  dmuart_port.dmr  manifest.dmm
.github/workflows/: ci.yml  release.yml
configs/: README.md
configs/board/: nucleo-f401re.ini  nucleo-f411re.ini  nucleo-f446re.ini  nucleo-f767zi.ini  stm32f4-discovery.ini  stm32f429i-discovery.ini  stm32f746g-disco.ini  stm32f769i-discovery.ini
configs/board/nucleo-f401re/: usart1.ini  usart2.ini
configs/board/nucleo-f411re/: usart1.ini  usart2.ini
configs/board/nucleo-f446re/: usart1.ini  usart2.ini
configs/board/nucleo-f767zi/: usart3.ini  usart6.ini
configs/board/stm32f4-discovery/: usart1.ini  usart2.ini
configs/board/stm32f429i-discovery/: usart1.ini
configs/board/stm32f746g-disco/: usart1.ini  usart6.ini
configs/board/stm32f769i-discovery/: usart1.ini  usart6.ini
configs/mcu/: stm32f401re.ini  stm32f405rg.ini  stm32f407vg.ini  stm32f411re.ini  stm32f429zi.ini  stm32f439zi.ini  stm32f446re.ini  stm32f469ni.ini  stm32f722re.ini  stm32f746zg.ini  stm32f767zi.ini  stm32f769ni.ini
docs/: README.md  api-reference.md  configuration.md  dmuart.md  examples.md  port-implementation.md
examples/: config.ini
include/: dmuart.h  dmuart_port.h  dmuart_types.h
include/port/: stm32_common_regs.h  stm32f4_regs.h  stm32f7_regs.h
src/: dmuart.c
src/port/: CMakeLists.txt  README.md
src/port/stm32_common/: stm32_common.c  stm32_common.h
src/port/stm32f4/: config.cmake  port.c
src/port/stm32f7/: config.cmake  port.c
tests/dmod-boot-test/: CMakeLists.txt  README.md  TESTING_SUMMARY.md  test_dmuart.c
tests/dmuart-test/: CMakeLists.txt  dmuart_test.c
